--- a/app/views/irm/organization_infos/index.html.erb
+++ b/app/views/irm/organization_infos/index.html.erb
@@ -68,7 +68,7 @@
                        { :key => "value", :label => t(:label_irm_organization_info_value),:searchable=>true },
                        { :key => "attachment", :label => t(:label_irm_organization_info_file)},
                        { :key => "description", :label => t(:label_irm_tab_description),:width=>"250px"}
-                      ],{:paginator_box=>"organization_infosPaginatorBox",:search_box=>"organization_infosSearchBox"})%>
+                      ],{:force_html=>true,:paginator_box=>"organization_infosPaginatorBox",:search_box=>"organization_infosSearchBox"})%>
         <div id="organization_infosPaginatorBox"></div>
       </div>
     </div>
