--- a/public/themes/default/stylesheets/jquery-datepicker.css
+++ b/public/themes/default/stylesheets/jquery-datepicker.css
@@ -1,20 +1,21 @@
 table.jCalendar {
-	border: 1px solid #000;
-	background: #aaa;
+
+	background: #FFFFFF;
     border-collapse: separate;
     border-spacing: 2px;
 }
 table.jCalendar th {
-	background: #333;
-	color: #fff;
+	background: #fff;
+	color: #333;
 	font-weight: bold;
 	padding: 3px 5px;
 }
 
 table.jCalendar td {
-	background: #ccc;
-	color: #000;
+    background: url("../images/calendar_table_cell_bg.png") repeat-x scroll 50% 50% #DFEFFC;
+    color: #2E6E9E;
 	padding: 3px 5px;
+    border: 1px solid #C5DBEC;
 	text-align: center;
 }
 table.jCalendar td.other-month {
@@ -22,8 +23,8 @@ table.jCalendar td.other-month {
 	color: #aaa;
 }
 table.jCalendar td.today {
-	background: #666;
-	color: #fff;
+	background: #FAD42E;
+
 }
 table.jCalendar td.selected {
 	background: #f66;
@@ -59,12 +60,13 @@ table.jCalendar td.unselectable.dp-hover {
 
 div.dp-popup {
 	position: relative;
-	background: #ccc;
+	background: #ffffff;
 	font-size: 10px;
 	font-family: arial, sans-serif;
 	padding: 2px;
-	width: 171px;
 	line-height: 1.2em;
+    border: 1px solid #A6C9E2;
+    border-radius: 5px 5px 5px 5px;
 }
 div#dp-popup {
 	position: absolute;
@@ -74,8 +76,14 @@ div.dp-popup h2 {
     display: block;
 	font-size: 12px;
 	text-align: center;
-	margin: 2px 0;
+
 	padding: 0;
+    line-height: 1.8em;
+    border: 1px solid #4297D7;
+    color: #FFFFFF;
+    font-weight: bold;
+    background: url("../images/calendar_table_header_bg.png") repeat-x scroll 50% 50% #5C9CCC;
+    border-radius: 5px 5px 5px 5px;
 }
 a#dp-close {
 	font-size: 11px;
@@ -93,12 +101,13 @@ div.dp-popup a {
 }
 div.dp-popup div.dp-nav-prev {
 	position: absolute;
-	top: 2px;
+	top: 5px;
 	left: 4px;
 	width: 100px;
 }
 div.dp-popup div.dp-nav-prev a {
 	float: left;
+    margin-right: 8px;
 }
 /* Opera needs the rules to be this specific otherwise it doesn't change the cursor back to pointer after you have disabled and re-enabled a link */
 div.dp-popup div.dp-nav-prev a, div.dp-popup div.dp-nav-next a {
@@ -109,12 +118,13 @@ div.dp-popup div.dp-nav-prev a.disabled, div.dp-popup div.dp-nav-next a.disabled
 }
 div.dp-popup div.dp-nav-next {
 	position: absolute;
-	top: 2px;
+	top: 5px;
 	right: 4px;
 	width: 100px;
 }
 div.dp-popup div.dp-nav-next a {
 	float: right;
+    margin-left: 8px;
 }
 div.dp-popup a.disabled {
 	cursor: default;
