--- a/modules/com/app/views/com/config_relation_members/_edit_form.html.erb
+++ b/modules/com/app/views/com/config_relation_members/_edit_form.html.erb
@@ -4,7 +4,7 @@
     <table cellpadding="0" cellspacing="0" border="0">
       <tbody>
         <tr>
-          <td class="pbTitle"><h2 class="mainTitle"><%=t(:label_irm_config_relation_member_new)%></h2></td>
+          <td class="pbTitle"><h2 class="mainTitle"><%=t(:label_com_config_relation_member)%></h2></td>
           <td id="topButtonRow" class="pbButton">
             <div class="button"><%= f.submit t(:save)%></div>
             <div class="button"><%= link_back t(:cancel)%></div>
@@ -31,13 +31,13 @@
         <tbody>
         <tr>
                       <td class="labelCol"><label><%=(t :label_com_config_relation_type_name)%></label></td>
-                      <td class="dataCol"><%=@config_relation_type_name%>  <%=f.hidden_field :config_relation_type_id,:value=>@config_relation_type_id %></td>
+                      <td class="dataCol"><%=@config_relation_member[:type_name]%>  <%=f.hidden_field :config_relation_type_id %></td>
 
                       <td class="labelCol"></td>
                       <td class="dataCol"></td>
                     </tr>
         <tr>
-                      <td class="labelCol"><label><%=(t :label_com_config_class_name)%></label></td>
+                      <td class="labelCol"><label><%=(t :label_com_config_relation_member_class_name)%></label></td>
                       <td class="dataCol"><%= f.select :config_class_id, nullable_options_for_select(available_config_class, @config_relation_member.config_class_id),
                                                                      {}, {:require=>true} %></td>
 
