--- a/modules/com/app/views/com/config_relation_types/show.html.erb
+++ b/modules/com/app/views/com/config_relation_types/show.html.erb
@@ -65,7 +65,7 @@
         <%= datatable("config_relation_members",{:controller=>"com/config_relation_members",:action=>"get_data",:config_relation_type_id=>@config_relation_type.id,:format=>"json"},
                       [{:key=>"id",:label=>t(:operation),:formatter=>"Y.irm.template",:width=>"70px"},
                        {:key=>"type_name",:label=>t(:label_com_config_relation_type_name),:width=>"140px"},
-                       {:key=>"config_class_name",:label=>t(:label_com_config_relation_member_class_name),:width=>"140px",:searchable=>true},
+                       {:key=>"config_class_name",:label=>t(:label_com_config_relation_member_class_name),:searchable=>true},
 
                                               ],{:paginator_box=>"config_relation_membersPaginatorBox",:search_box=>"config_relation_membersSearchBox"})%>
         <div id="config_relation_membersPaginatorBox"></div>
