--- a/modules/com/app/views/com/config_attributes/index.html.erb
+++ b/modules/com/app/views/com/config_attributes/index.html.erb
@@ -28,7 +28,7 @@
                        { :key => "input_type", :label => t(:label_com_config_attribute_input_type),:searchable=>true },
                        { :key => "name", :label => t(:label_com_config_attribute_name),:searchable=>true },
                        { :key => "description", :label => t(:label_com_config_attribute_description),:width=>"250px" }
-                      ],{:paginator_box=>"config_attributesPaginatorBox",:search_box=>"config_attributesSearchBox"})%>
+                      ],{:paginator_box=>"config_attributesPaginatorBox",:search_box=>"config_attributesSearchBox",:force_html=>true})%>
         <div id="config_attributesPaginatorBox"></div>
       </div>
     </div>
