--- a/modules/com/app/views/com/config_attributes/multilingual_edit.html.erb
+++ b/modules/com/app/views/com/config_attributes/multilingual_edit.html.erb
@@ -1,4 +1,4 @@
-<%= common_title(:show_data=>@portlet[:name]) %>
+<%= common_title(:show_data=>@config_attribute[:name]) %>
 <div class="container">
    <%=render :partial=>"multilingual/edit",:locals=>{:main_data=>@config_attribute} %>
 </div>
