--- a/modules/com/app/views/com/config_classes/index.html.erb
+++ b/modules/com/app/views/com/config_classes/index.html.erb
@@ -1,40 +1,113 @@
 <%= page_title %>
+<% require_javascript([:treeview]) %>
+<% require_css([:treeview]) %>
 <div class="listRelatedObject setupBlock">
     <div class="page-block">
       <div class="pbHeader">
         <table cellpadding="0" cellspacing="0" border="0">
           <tbody>
             <tr>
-              <td class="pbTitle"><h2 class="mainTitle"><%= t(:label_com_config_class_list) %></h2></td>
-              <td id="topButtonRow" class="pbButton">
-                <div class="button"><%= link_to t(:new), {:action => "new"}%></div>
-              </td>
+              <% if params[:mode] == 'tree' %>
+                <td class="pbTitle"><h2 class="mainTitle"><%= t(:label_com_config_class_structure) %></h2></td>
+                <% else %>
+                <td class="pbTitle"><h2 class="mainTitle"><%= t(:label_com_config_class_list) %></h2></td>
+                <td id="topButtonRow" class="pbButton">
+                  <div class="button"><%= link_to t(:new), {:action => "new"}%></div>
+                </td>
+              <% end %>
               <td class="pbHelp">
                 <div id="config_classesSearchBox"></div>
+                <div>
+                  <%= form_tag({:controller => "com/config_classes"}, {:method => 'get'}) do %>
+                      <span class="viewSelect">
+                        <%= select_tag_alias(:mode,available_mode_views, params[:mode], {:onchange => 'javascript: $.cookie("organization_view", this.value);this.form.submit();'}) %>
+                      </span>
+                  <% end %>
+                </div>
               </td>
             </tr>
           </tbody>
         </table>
       </div>
       <div class="pbBody">
-        <div id="config_classes" class="datatable" style="width:100%">
-          <div id="id" style="display:none">
-            <%= link_to(t(:edit),{:action=>"edit",:id=>"{id}"}) %>|<%= link_to(t(:show),{:action=>"show",:id=>"{id}"}) %>
+      <% if params[:mode] == 'tree' %>
+      <!-- 树形展示开始 -->
+        <div id="sidetreecontrol"> <a href="?#"><%= t(:collapse_all) %></a> | <a href="?#"><%= t(:expand_all) %></a> </div>
+        <%= config_classes_tree_data %>
+      <!-- 树形展示结束 -->
+      <% else %>
+      <!--  irm datatable   -->
+          <div class="irm-datatable">
+            <div>
+                <table count="<%=@leveled_config_classes.length%>">
+                  <thead>
+                    <tr >
+                        <th style="width:80px;">
+                          <div><%= t(:operation) %></div>
+                        </th>
+                        <th>
+                          <div ><%= t(:label_com_config_class_name) %></div>
+                        </th>
+                        <th>
+                          <div ><%= t(:label_com_config_class_parent) %></div>
+                        </th>
+                        <th>
+                          <div ><%= t(:description) %></div>
+                        </th>
+                        <th>
+                          <div ><%= t(:label_com_config_class_leaf_flag) %></div>
+                        </th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <% @leveled_config_classes.each do |config_class| %>
+                    <tr id="<%=config_class.id%>">
+                      <td >
+                        <div>
+                          <%= link_to(t(:edit),{:action=>"edit",:id=>config_class.id}) %> | <%= link_to(t(:show),{:action=>"show",:id=>config_class.id}) %>
+                         </div>
+                      </td>
+                      <td>
+                        <div >
+                           <% config_class.level.times do %>&nbsp;&nbsp;&nbsp;&nbsp;<%end%><%= config_class[:name] %>
+                        </div>
+                      </td>
+                      <td>
+                        <div >
+                           <%= config_class[:parent_name] %>
+                        </div>
+                      </td>
+                      <td>
+                        <div >
+                           <%= config_class[:description] %>
+                        </div>
+                      </td>
+                      <td>
+                        <div >
+                          <%= check_img(config_class[:leaf_flag]) %>
+                        </div>
+                      </td>
+                    </tr>
+                    <% end -%>
+                  </tbody>
+                </table>
+            </div>
           </div>
-          <div id="leaf_flag" style="display:none">
-            <%= check_img("{leaf_flag}") %>
-          </div>
-        </div>
-        <%= datatable("config_classes",{:action=>"get_data",:format=>"json"},
-                      [{:key=>"id",:label=>t(:operation),:formatter=>"Y.irm.template",:width=>"70px"},
-                       { :key => "code", :label => t(:label_com_config_class_code),:searchable=>true },
-                       { :key => "name", :label => t(:label_com_config_class_name),:searchable=>true },
-                       { :key => "description", :label => t(:label_com_config_class_description),:width=>"250px" },
-                       { :key => "leaf_flag", :label => t(:label_com_config_class_leaf_flag),:formatter=>"Y.irm.template"}
-                      ],{:paginator_box=>"config_classesPaginatorBox",:search_box=>"config_classesSearchBox"})%>
-        <div id="config_classesPaginatorBox"></div>
+        <!--  end irm datatable      -->
+        <% end %>
       </div>
     </div>
 </div>
+<script type="text/javascript">
+  $(function(){
+      $("#config_classes_tree").treeview({
+        animated: "fast",
+        control:"#sidetreecontrol",
+        collapsed: true,
+        unique: false,
+        persist: "cookie"
+      });
+  })
+</script>
 
 
