添加配置属性来源显示； 添加含有子节点的配置分类在编辑的时候不能对叶子节点属性进行修改判断

--- a/modules/com/app/views/com/config_classes/show.html.erb
+++ b/modules/com/app/views/com/config_classes/show.html.erb
@@ -26,6 +26,12 @@
               <td class="dataCol empty"><div>&nbsp;</div></td>
             </tr>
             <tr>
+              <td class="labelCol"><label ><%=t(:label_com_config_class_name)%></label></td>
+              <td class="dataCol"><div><%= @config_class[:name] %></div></td>
+              <td class="labelCol empty"><div>&nbsp;</div></td>
+              <td class="dataCol empty"><div>&nbsp;</div></td>
+            </tr>
+            <tr>
               <td class="labelCol"><label ><%=t(:label_com_config_class_leaf_flag)%></label></td>
               <td class="dataCol"><div><%= check_img(@config_class.leaf_flag) %></div></td>
               <td class="labelCol empty"><div>&nbsp;</div></td>
