--- a/modules/com/app/views/com/config_attributes/_new_form.html.erb
+++ b/modules/com/app/views/com/config_attributes/_new_form.html.erb
@@ -1,4 +1,5 @@
 <%= form_for(@config_attribute,:url=>{:action=>"create"},:builder => LabellingFormBuilder) do |f| %>
+<%=f.hidden_field :config_class_id  %>
 <div id="ep" class="edit-block page-block">
   <div class="pbHeader">
     <table cellpadding="0" cellspacing="0" border="0">
@@ -36,29 +37,30 @@
               <td class="dataCol empty">&nbsp;</td>
             </tr>
             <tr>
-              <td class="labelCol"><label for="config_attribute_class"><%=t(:label_com_config_class)%></label></td>
-              <td class="dataCol"><%= f.select :config_class_id, available_classes, {}, :required => true %></td>
+              <td class="labelCol"><label for="config_attribute_name"><%=t(:label_com_config_attribute_name)%></label></td>
+              <td class="dataCol"><%=f.text_field :name, :required=>true ,:id=>"config_attribute_name"%></td>
+              <td class="labelCol empty">&nbsp;</td>
+              <td class="dataCol empty">&nbsp;</td>
+            </tr>
+            <tr>
+              <td class="labelCol"><label for="config_attribute_input_type"><%=t(:label_com_config_class)%></label></td>
+              <td class="dataCol">
+                <%=f.blank_select(:config_class_id,available_classes,{}, {:disabled => true,:required => true}) %></td>
               <td class="labelCol empty">&nbsp;</td>
               <td class="dataCol empty">&nbsp;</td>
             </tr>
             <!-- 输入类型 -->
             <tr>
               <td class="labelCol"><label for="config_attribute_input_type"><%=t(:label_com_config_attribute_input_type)%></label></td>
-              <td class="dataCol"><%= f.select :input_type, Irm::LookupValue.get_lookup_value("CONFIG_ATTRIBUTE_INPUT_TYPE").collect{|p| [p[:meaning], p.lookup_code]}, {}, :required => true %></td>
+              <td class="dataCol">
+                <%=f.blank_select(:input_type,Irm::LookupValue.get_lookup_value("CONFIG_ATTRIBUTE_INPUT_TYPE").collect{|p| [p[:meaning], p.lookup_code]},{}, {:required => true}) %></td>
               <td class="labelCol empty">&nbsp;</td>
               <td class="dataCol empty">&nbsp;</td>
             </tr>
 
             <tr>
               <td class="labelCol"><label for="config_attribute_input_value"><%=t(:label_com_config_attribute_input_value)%></label></td>
-              <td class="dataCol"><%=f.text_field :input_value, :required=>true ,:id=>"config_attribute_input_value"%></td>
-              <td class="labelCol empty">&nbsp;</td>
-              <td class="dataCol empty">&nbsp;</td>
-            </tr>
-
-            <tr>
-              <td class="labelCol"><label for="config_attribute_name"><%=t(:label_com_config_attribute_name)%></label></td>
-              <td class="dataCol"><%=f.text_field :name, :required=>true ,:id=>"config_attribute_name"%></td>
+              <td class="dataCol"><%=f.text_field :input_value ,:id=>"config_attribute_input_value"%></td>
               <td class="labelCol empty">&nbsp;</td>
               <td class="dataCol empty">&nbsp;</td>
             </tr>
