--- a/modules/com/app/views/com/config_attributes/get_data.html.erb
+++ b/modules/com/app/views/com/config_attributes/get_data.html.erb
@@ -22,11 +22,14 @@
              <th>
                <div><%= t(:label_com_config_attribute_description) %></div>
              </th>
+             <th>
+               <div><%= t(:label_config_class_attribute_extend) %></div>
+             </th>
            </tr>
          </thead>
          <tbody>
-         <% @datas.each do |data| %>
-         <tr id="<%=data.id %>">
+         <% @datas.each do |key,data| %>
+         <tr id="<%=key %>">
            <td>
              <div>
                 <%= link_to(t(:edit),{:action=>"edit",:id=>data.id}) %>|<%= link_to(t(:show),{:action=>"show",:id=>data.id}) %>
@@ -39,13 +42,16 @@
              <div><%= data[:name] %></div>
            </td>
            <td>
-             <div><%= data[:input_type] %></div>
+             <div><%= get_meaning_by_type_code("CONFIG_ATTRIBUTE_INPUT_TYPE", data[:input_type]) %></div>
            </td>
            <td>
              <div><%= data[:input_value] %></div>
            </td>
            <td>
              <div><%= data[:description] %></div>
+           </td>
+           <td>
+             <div><%= check_img(data[:from_parent]) %></div>
            </td>
          </tr>
          <% end -%>
