--- a/modules/com/app/views/com/config_items/show.html.erb
+++ b/modules/com/app/views/com/config_items/show.html.erb
@@ -61,3 +61,38 @@
     </div>
   </div>
 </div>
+<div class="listRelatedObject setupBlock">
+    <div class="page-block">
+      <div class="pbHeader">
+        <table cellpadding="0" cellspacing="0" border="0">
+          <tbody>
+            <tr>
+              <td class="pbTitle"><h2 class="mainTitle"><%= t(:label_com_config_item_relation_list) %></h2></td>
+              <td  class="pbButton">
+                <div class="button"><%= link_to t(:new), {:controller=>"com/config_item_relations",:config_item_id=>@config_item.id,:action => "new"}%></div>
+              </td>
+              <td class="pbHelp">
+                <div id="config_item_relationsSearchBox"></div>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+      <div class="pbBody">
+        <div id="config_item_relations" class="datatable" style="width:100%">
+          <div id="id" style="display:none">
+            <%= link_to(t(:edit),{:controller=>"com/config_item_relations",:action=>"edit",:id=>"{id}"}) %>|<%=link_to(t(:show),{:controller=>"com/config_item_relations",:action=>"show",:id=>"{id}"}) %>|<%= link_to(t(:delete),{:controller=>"com/config_item_relations",:action=>"destroy",:id=>"{id}"},:back=>true,:confirm => t(:label_are_you_sure) ,
+                                                    :method => :delete) %>
+          </div>
+        </div>
+        <%= datatable("config_item_relations",{:controller=>"com/config_item_relations",:action=>"get_data",:config_item_id=>@config_item.id,:format=>"json"},
+                      [{:key=>"id",:label=>t(:operation),:formatter=>"Y.irm.template",:width=>"120px"},
+                       {:key=>"item_number",:label=>t(:label_com_config_item_number),:width=>"170px"},
+                       {:key=>"relation_type_name",:label=>t(:label_com_config_relation_type),:width=>"170px",:searchable=>true},
+                       {:key=>"relation_item_number",:label=>t(:label_com_config_item_relation_config_item),:width=>"170px",:searchable=>true},
+                       {:key=>"description",:label=>t(:description),:searchable=>true},
+                                              ],{:paginator_box=>"config_item_relationsPaginatorBox",:search_box=>"config_item_relationsSearchBox"})%>
+        <div id="config_item_relationsPaginatorBox"></div>
+      </div>
+    </div>
+</div>
