Feature #1232 配置项管理，关联关系基本功能完成，待进一步完善

--- a/modules/com/app/views/com/config_items/get_dynamic_attributes.html.erb
+++ b/modules/com/app/views/com/config_items/get_dynamic_attributes.html.erb
@@ -13,7 +13,9 @@
 
     %>
         <%=    blank_select_tag "config_item_attribute[#{config_attribute[:id]}]",select_vlaues,@attribute_values["#{config_attribute[:id]}"]    %>
-    <%
+    <% when "DATE" %>
+        <%=text_field_tag  "config_item_attribute[#{config_attribute[:id]}]",@attribute_values["#{config_attribute[:id]}"] %>
+        <%
        end
     %>
 
