Feature #1232 配置项管理，关联关系基本功能完成，关联配置项可以改进为使用LOV

--- a/modules/com/app/views/com/config_items/_edit_form.html.erb
+++ b/modules/com/app/views/com/config_items/_edit_form.html.erb
@@ -1,6 +1,6 @@
 <% require_javascript(:datepicker) %>
 <% require_css(:datepicker) %>
-<%= form_for(@config_item,:url=>{:action=>"update"},:builder => LabellingFormBuilder) do |f| %>
+<%= form_for(@config_item,:url=>{:action=>"update",:id=>@config_item.id},:builder => LabellingFormBuilder) do |f| %>
 <div id="ep" class="edit-block page-block">
   <div class="pbHeader">
     <table cellpadding="0" cellspacing="0" border="0">
@@ -34,7 +34,7 @@
         <tbody>
         <tr>
           <td class="labelCol"><label><%=t(:label_com_config_item_number)%></label></td>
-          <td class="dataCol"><%=f.text_field :item_number, :required=>true %></td>
+          <td class="dataCol"><%=@config_item.item_number %></td>
           <td class="labelCol empty">&nbsp;</td>
           <td class="dataCol empty">&nbsp;</td>
         </tr>
@@ -104,11 +104,57 @@
                         var url=config_class_id+"/get_dynamic_attributes.html";
                         $.get(url, function(result){
                             $("#config_item_table").append(result);
+                            refresh_required();
+                            refresh_datepiker();
                           });
+
+
                     }
 
                 });
                 $("#config_class_id").change();
             }
     )
+    function refresh_required(){
+        $("input[required='required']").each(function(index, n){
+                var parent_node = $(n).parent();
+                var node = '<div class="requiredInput"><div class="requiredBlock"></div>' + $(parent_node).html() + '</div>';
+                $(parent_node).html(node);
+            });
+    }
+    function refresh_datepiker(){
+        if($.fn.datePicker){
+                $("input.date").each(function(i,e){
+                    var options = {};
+                    if(!$(e).attr("future")){
+                        options["startDate"] =new Date(1996, 1, 1);
+                    }
+                    if($(e).attr("nobutton")){
+                        options["createButton"] =false;
+                    }
+                    if($(e).attr("today")){
+                        $(e).datePicker(options).val(new Date().asString()).trigger('change');
+                    }
+                    else
+                    {
+                        $(e).datePicker(options);
+                    }
+                    $(e).bind("click",function(event){
+                        $(this).dpDisplay();
+                    })
+                    $(e).bind("keyup",function(event){
+                        if(event.keyCode=="9"){
+                            $(this).dpDisplay();
+                        }
+                    })
+                    $(e).bind("keydown",function(event){
+                        if(event.keyCode=="9"){
+                          $(this).dpClose();
+                        }
+                    })
+
+                });
+            }
+    }
+
 </script>
