编辑属性配置将选择配置分类id设置为不可选择

--- a/modules/com/app/views/com/config_attributes/_new_form.html.erb
+++ b/modules/com/app/views/com/config_attributes/_new_form.html.erb
@@ -43,9 +43,10 @@
               <td class="dataCol empty">&nbsp;</td>
             </tr>
             <tr>
-              <td class="labelCol"><label for="config_attribute_input_type"><%=t(:label_com_config_class)%></label></td>
+              <td class="labelCol"><label for="config_attribute_class"><%=t(:label_com_config_class)%></label></td>
               <td class="dataCol">
-                <%=f.blank_select(:config_class_id,available_classes,{}, {:disabled => true,:required => true}) %></td>
+                <%=f.blank_select(:config_class_id,available_classes,{}, {:disabled => true,:required => true}) %>
+              </td>
               <td class="labelCol empty">&nbsp;</td>
               <td class="dataCol empty">&nbsp;</td>
             </tr>
