--- a/modules/com/app/views/com/config_attributes/_edit_form.html.erb
+++ b/modules/com/app/views/com/config_attributes/_edit_form.html.erb
@@ -55,7 +55,7 @@
 
             <tr>
               <td class="labelCol"><label for="config_attribute_input_value"><%=t(:label_com_config_attribute_input_value)%></label></td>
-              <td class="dataCol"><%=f.text_field :input_value, :required=>true ,:id=>"config_attribute_input_value"%></td>
+              <td class="dataCol"><%=f.text_field :input_value,:id=>"config_attribute_input_value"%></td>
               <td class="labelCol empty">&nbsp;</td>
               <td class="dataCol empty">&nbsp;</td>
             </tr>
