Feature #1232 配置项管理，左边树形菜单

--- a/modules/com/app/views/com/config_items/index.html.erb
+++ b/modules/com/app/views/com/config_items/index.html.erb
@@ -17,20 +17,35 @@
         </table>
       </div>
       <div class="pbBody">
-        <div id="config_items" class="datatable" style="width:100%">
-          <div id="id" style="display:none">
-            <%= link_to(t(:edit),{:action=>"edit",:id=>"{id}"}) %>|<%= link_to(t(:show),{:action=>"show",:id=>"{id}"}) %>
-          </div>
-        </div>
-        <%= datatable("config_items",{:action=>"get_data",:format=>"json"},
-                      [{:key=>"id",:label=>t(:operation),:formatter=>"Y.irm.template",:width=>"70px"},
-                       {:key=>"item_number",:label=>t(:label_com_config_item_number),:width=>"140px",:searchable=>true},
-                       {:key=>"config_class_name",:label=>t(:label_com_config_item_config_class),:width=>"140px",:searchable=>true},
-                       {:key=>"managed_group_name",:label=>t(:label_com_config_item_managed_group),:width=>"140px",:searchable=>true},
-                       {:key=>"managed_person_name",:label=>t(:label_com_config_item_managed_person),:searchable=>true},
-                       {:key=>"last_checked_at",:label=>t(:label_com_config_item_last_checked_at)},
-                                              ],{:paginator_box=>"config_itemsPaginatorBox",:search_box=>"config_itemsSearchBox"})%>
-        <div id="config_itemsPaginatorBox"></div>
+        <table class="split-table">
+          <tr>
+            <td>
+              <%= render :partial =>"/irm/common/tree_sidebar", :locals =>{:tree_url => url_for(:controller => "com/config_classes", :action=>"get_class_tree",  :format=>:json),
+                                                                           :target_table => "config_items",
+                                                                           :tree_id => "tree-div",
+                                                                           :title => t(:label_com_config_class),
+                                                                           :root_text => t(:label_com_config_item_all_class),
+                                                                           :url_param_value => 'id',
+                                                                           :url_param_name => 'config_class_id'} %>
+            </td>
+            <td>
+                    <div id="config_items" class="datatable" style="width:100%">
+                      <div id="id" style="display:none">
+                        <%= link_to(t(:edit),{:action=>"edit",:id=>"{id}"}) %>|<%= link_to(t(:show),{:action=>"show",:id=>"{id}"}) %>
+                      </div>
+                    </div>
+                    <%= datatable("config_items",{:action=>"get_data",:format=>"json"},
+                                  [{:key=>"id",:label=>t(:operation),:formatter=>"Y.irm.template",:width=>"70px"},
+                                   {:key=>"item_number",:label=>t(:label_com_config_item_number),:width=>"140px",:searchable=>true},
+                                   {:key=>"config_class_name",:label=>t(:label_com_config_item_config_class),:width=>"140px",:searchable=>true},
+                                   {:key=>"managed_group_name",:label=>t(:label_com_config_item_managed_group),:width=>"140px",:searchable=>true},
+                                   {:key=>"managed_person_name",:label=>t(:label_com_config_item_managed_person),:searchable=>true},
+                                   {:key=>"last_checked_at",:label=>t(:label_com_config_item_last_checked_at)},
+                                                          ],{:paginator_box=>"config_itemsPaginatorBox",:search_box=>"config_itemsSearchBox"})%>
+                    <div id="config_itemsPaginatorBox"></div>
+            </td>
+          </tr>
+        </table>
       </div>
     </div>
 </div>
